Revise README for project configuration and structure
Updated README to reflect changes in project structure and configuration.